fixes spacing

--- a/src/components/user-profile/profile.scss
+++ b/src/components/user-profile/profile.scss
@@ -249,7 +249,7 @@
 
     
     .avatar-tab {
-        padding: 5px;
+        padding: 15px;
         display: flex;
         flex-direction: column;
         justify-content:space-between;
